# gait

./: .gitignore  .pylintrc  404.html  CNAME  LICENSE  README.md  constants.py  coverage.xml  exceptions.py  gait.config  gait.py  git.py  gpt.py  index.html  lint.sh  mkdocs.yml  pyproject.toml  qodana.yaml  requirements.txt  search.html  sitemap.xml  test-requirements.txt
.codesandbox/: tasks.json
.github/workflows/: mkdocs.yml  pylint.yml  pytest.yml
contributing/: index.html
diffs/: diff-43d04660-1ab8-11ee-bc5a-7aafd47036cd.txt  diff-52cee72e-1eb0-11ee-9f73-7aafd47036cc.txt  diff-5d39897c-1ab8-11ee-b004-7aafd47036cd.txt  diff-685fc1de-1ab5-11ee-8f98-7aafd47036cd.txt  diff-80c1fde6-1eb1-11ee-9d64-7aafd47036cc.txt  diff-9f23d18a-1ab8-11ee-9e19-7aafd47036cd.txt  diff-aeda2b38-1a95-11ee-a03c-7aafd47036cd.txt  diff-ca87d3dc-1ab6-11ee-9b75-7aafd47036cd.txt  diff-cd3be38c-1a95-11ee-b338-7aafd47036cd.txt  diff-ef8aa7dc-1eac-11ee-af14-82445d05b801.txt  diff-f8304512-1eb2-11ee-932d-7aafd47036cc.txt
docs/: README.md  contributing.md  tests.md
gait/: __init__.py  gait.py
gait.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gait/services/: git.py  openai.py
search/: search_index.json
services/: exceptions.py  git.py  github.py  gpt.py  openai.py
src/: __init__.py  gait.py
src/diffs/: diff-1a710fd0-1a94-11ee-a87f-7aafd47036cd.txt  diff-30c4a340-1b9e-11ee-9aac-7aafd47036cb.txt  diff-79b163a4-1a95-11ee-95f7-7aafd47036cd.txt
src/services/: constants.py  exceptions.py  git.py  (+2 more)
tests/: index.html  test_gait.py  test_git.py  test_github.py  test_openai.py
